--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -25,6 +25,13 @@ jobs:
       uses: actions/setup-node@v2-beta
       with: 
         node-version: 12
+    - name: install Yarn
+      uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: install   
+    - name: Build React App
+      run: yarn Build
+    
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
