--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -25,7 +25,12 @@ jobs:
       uses: actions/setup-node@v2-beta
       with: 
         node-version: 12
- 
+    
+    - name: Install Yarn
+      uses: borales/actions-yarn@v2.0.0
+      with:
+        command: install
+    
     - name: Build React App
       run: yarn Build
     
