--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -37,4 +37,4 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./ bootcamp2020class3.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build bootcamp2020class3.surge.sh --token ${{secrets.SURGE_TOKEN}}
